  Bug #18172 XML: Extractvalue() accepts mallformed   XPath without a XPath syntax error item_xmlfunc.cc:   Error message didn't happen because after   a failing attempt to parse RelativeLocationPath,   my_xpath_parse_AbsoluteLocationPath() returned success.   Changeing logic a bit:   - Try to parse EOF first, return success if true.   - Then try to parse RelativeLocationPath(), return success if true.   - Otherwise return failure. xml.result:   Adding test case.   Also, this change made it possible to generate   an error message earlier in the case of another   bad XPATH syntax. xml.test:   Adding test case.

sql/item_xmlfunc.cc:
  Bug #18172 XML: Extractvalue() accepts mallformed XPath without a XPath syntax error
  Error message didn't happen because after
  a failing attempt to parse RelativeLocationPath(),
  my_xpath_parse_AbsoluteLocationPath() returned with 1.
  Changeing logic a bit: check for EOF first.
  Then try to parse RelativeLocationPath().
  If the latter fails, return failure.
mysql-test/t/xml.test:
  Adding test case.
mysql-test/r/xml.result:
  Adding test case.
  Also, this change makes error message
  to be generated earlier in the case of another
  bad XPATH syntax.